add optimization with N-Promoter-Prediction

--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -33,12 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import joblib\n",
     "import time\n",
     "import timeit\n",
     "import joblib\n",
@@ -58,17 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already existent data directory  data-Example1-Pput .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
@@ -93,117 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Following outliers were detected: ID: ['BGSPL14g_19_a'], Value: [[50.13234789]]\n",
-      "Original values of expression.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>level_0</th>\n",
-       "      <th>index</th>\n",
-       "      <th>Strain ID</th>\n",
-       "      <th>Sequence</th>\n",
-       "      <th>Promoter Activity</th>\n",
-       "      <th>Sequence_label-encrypted</th>\n",
-       "      <th>Sequence_letter-encrypted</th>\n",
-       "      <th>GC-content</th>\n",
-       "      <th>Promoter Activity_ML</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BG14g</td>\n",
-       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
-       "      <td>35.057893</td>\n",
-       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
-       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
-       "      <td>0.575</td>\n",
-       "      <td>35.057893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BG14g</td>\n",
-       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
-       "      <td>33.579982</td>\n",
-       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
-       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
-       "      <td>0.575</td>\n",
-       "      <td>33.579982</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>BG14g</td>\n",
-       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
-       "      <td>31.523439</td>\n",
-       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
-       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
-       "      <td>0.575</td>\n",
-       "      <td>31.523439</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   level_0  index Strain ID  \\\n",
-       "0        0      0     BG14g   \n",
-       "1        1      1     BG14g   \n",
-       "2        2      2     BG14g   \n",
-       "\n",
-       "                                            Sequence  Promoter Activity  \\\n",
-       "0  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          35.057893   \n",
-       "1  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          33.579982   \n",
-       "2  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          31.523439   \n",
-       "\n",
-       "                            Sequence_label-encrypted  \\\n",
-       "0  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
-       "1  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
-       "2  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
-       "\n",
-       "                  Sequence_letter-encrypted  GC-content  Promoter Activity_ML  \n",
-       "0  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575             35.057893  \n",
-       "1  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575             33.579982  \n",
-       "2  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575             31.523439  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "SeqDat = Data_Src_Load(Name_Dict)\n",
     "SeqDat.head(3)"
@@ -222,17 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load existing Train-Test split data-Example1-Pput/00000000_Example1-Pput_1_TrainTest-Data.pkl.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You can generate a new train-test split or use an existing file. \n",
     "# If the ML_Date is from the current date, it is assumed you generate a new regressor\n",
@@ -282,17 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normalization: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
     "# Target for classification cannot be normalized\n",
@@ -333,25 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting new RF-ML training with Regression for Promoter Activity_ML\n",
-      "Training run time: 15 sec\n",
-      "Estimator hyperparameter:  <bound method BaseEstimator.get_params of RandomForestRegressor(bootstrap=False, ccp_alpha=0.0, criterion='mse',\n",
-      "                      max_depth=2, max_features=22, max_leaf_nodes=None,\n",
-      "                      max_samples=None, min_impurity_decrease=0.0,\n",
-      "                      min_impurity_split=None, min_samples_leaf=3,\n",
-      "                      min_samples_split=3, min_weight_fraction_leaf=0.0,\n",
-      "                      n_estimators=40, n_jobs=None, oob_score=False,\n",
-      "                      random_state=None, verbose=0, warm_start=False)>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Number of independent promoter library measurements\n",
     "Regressor_Best = dict()\n",
@@ -419,9 +270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "exp2ipynb",
    "language": "python",
-   "name": "python3"
+   "name": "exp2ipynb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -433,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
