--- a/RegressorTests/GeneOptim_GA_classifier_arg.ipynb
+++ b/RegressorTests/GeneOptim_GA_classifier_arg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Params_File = '00000000_Example1-Pput_Promoter-Activity_ML_SV3-Params.pkl'\n",
-    "Regressor_File = '00000000_Example1-Pput_Promoter-Activity_ML_SV3-Regressor.pkl'\n",
-    "Sequences_file = 'Example1-Pput.csv'\n",
+    "Params_File = '../data-Example1-Pput/00000000_Example1-Pput_Promoter-Activity_ML_RF3-Params.pkl'\n",
+    "Regressor_File = '../data-Example1-Pput/00000000_Example1-Pput_Promoter-Activity_ML_RF3-Regressor.pkl'\n",
+    "Sequences_file = '../Example1-Pput.csv'\n",
     "\n",
     "parallelEvaluation = False"
    ]
@@ -44,16 +44,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ulf/anaconda3/envs/exp2ipynb/lib/python3.9/site-packages/sklearn/base.py:310: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 0.22.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n",
+      "/home/ulf/anaconda3/envs/exp2ipynb/lib/python3.9/site-packages/sklearn/base.py:310: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 0.22.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Unpickle regressor and scaler\n",
     "myRegr = joblib.load(Regressor_File)\n",
     "myParams = joblib.load(Params_File)\n",
     "mySequences = pd.read_csv(Sequences_file, sep=';')\n",
     "\n",
-    "nNukleotides = myRegr.support_vectors_.shape[1] - 1"
+    "# nNukleotides = myRegr.support_vectors_.shape[1] - 1\n",
+    "nNukleotides = myRegr.n_features_ - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Strain ID</th>\n",
+       "      <th>Sequence</th>\n",
+       "      <th>Promoter Activity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>35.057893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>33.579982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>31.523439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>27.666760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>27.818360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>545</th>\n",
+       "      <td>mod7_4</td>\n",
+       "      <td>GCCCAATGACCAGGCTCTCGCGGCCAGGTATACTTGCACG</td>\n",
+       "      <td>0.217872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>546</th>\n",
+       "      <td>mod8_1</td>\n",
+       "      <td>GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG</td>\n",
+       "      <td>0.782933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>mod8_1</td>\n",
+       "      <td>GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG</td>\n",
+       "      <td>0.475286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>mod8_1</td>\n",
+       "      <td>GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG</td>\n",
+       "      <td>0.463943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>mod8_1</td>\n",
+       "      <td>GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG</td>\n",
+       "      <td>0.638129</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>550 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Strain ID                                  Sequence  Promoter Activity\n",
+       "0       BG14g  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG          35.057893\n",
+       "1       BG14g  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG          33.579982\n",
+       "2       BG14g  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG          31.523439\n",
+       "3       BG14g  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG          27.666760\n",
+       "4       BG14g  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG          27.818360\n",
+       "..        ...                                       ...                ...\n",
+       "545    mod7_4  GCCCAATGACCAGGCTCTCGCGGCCAGGTATACTTGCACG           0.217872\n",
+       "546    mod8_1  GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG           0.782933\n",
+       "547    mod8_1  GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG           0.475286\n",
+       "548    mod8_1  GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG           0.463943\n",
+       "549    mod8_1  GCCCAATGACTAGGCTCTCGCGGCCAGGTATACTTGCACG           0.638129\n",
+       "\n",
+       "[550 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mySequences"
    ]
   },
   {
@@ -65,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +214,7 @@
     "    # Static variables\n",
     "    creator_used = False\n",
     "    \n",
-    "    def __init__(self, parallelevaluation=False, tournsize=3, mateindpb=0.5, mutindpb=0.05):\n",
+    "    def __init__(self, parallelEvaluation=False, tournsize=3, mateindpb=0.5, mutindpb=0.05):\n",
     "                \n",
     "        self._toolbox = base.Toolbox()\n",
     "\n",
@@ -245,65 +386,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gen\tnevals\tavg    \tstd    \tmin\tmax\n",
-      "0  \t300   \t56.1933\t8.13691\t29 \t74 \n",
-      "1  \t177   \t49.35  \t7.55298\t23 \t69 \n",
-      "2  \t174   \t43.4733\t7.20805\t24 \t67 \n",
-      "3  \t173   \t37.5567\t6.52228\t20 \t65 \n",
-      "4  \t205   \t42.2267\t96.4648\t18 \t1000\n",
-      "5  \t181   \t47.0467\t136.276\t13 \t1000\n",
-      "6  \t172   \t62.51  \t191.429\t8  \t1000\n",
-      "7  \t192   \t62.76  \t199.552\t5  \t1000\n",
-      "8  \t174   \t46.06  \t167.831\t5  \t1000\n",
-      "9  \t187   \t49.55  \t185.484\t5  \t1000\n",
-      "10 \t185   \t46.6467\t186.036\t5  \t1000\n",
-      "11 \t179   \t57.73  \t216.193\t5  \t1000\n",
-      "12 \t171   \t29.8467\t149.976\t5  \t1000\n",
-      "13 \t180   \t12.4033\t80.9426\t5  \t1000\n",
-      "14 \t191   \t12.01  \t80.9515\t5  \t1000\n",
-      "15 \t183   \t12.1667\t80.9535\t5  \t1000\n",
-      "16 \t183   \t8.69667\t57.3507\t5  \t1000\n",
-      "17 \t171   \t8.71667\t57.3492\t5  \t1000\n",
-      "18 \t186   \t15.5833\t98.9591\t5  \t1000\n",
-      "19 \t182   \t12.2867\t80.9505\t5  \t1000\n",
-      "20 \t167   \t5.36667\t1.64283\t5  \t20  \n",
-      "21 \t191   \t22.0767\t127.327\t5  \t1000\n",
-      "22 \t188   \t12.2833\t80.9457\t5  \t1000\n",
-      "23 \t179   \t12.0567\t80.9509\t5  \t1000\n",
-      "24 \t184   \t11.95  \t80.9575\t5  \t1000\n",
-      "25 \t176   \t8.63333\t57.351 \t5  \t1000\n",
-      "26 \t157   \t11.9633\t80.9577\t5  \t1000\n",
-      "27 \t193   \t8.89   \t57.3514\t5  \t1000\n",
-      "28 \t199   \t5.64667\t2.07408\t5  \t15  \n",
-      "29 \t182   \t5.68333\t2.33446\t5  \t20  \n",
-      "30 \t178   \t12.0633\t80.9532\t5  \t1000\n",
-      "31 \t183   \t5.33   \t1.47007\t5  \t15  \n",
-      "32 \t184   \t18.7433\t114.083\t5  \t1000\n",
-      "33 \t170   \t12.0267\t80.9531\t5  \t1000\n",
-      "34 \t199   \t12.0967\t80.9513\t5  \t1000\n",
-      "35 \t182   \t15.5033\t98.9628\t5  \t1000\n",
-      "36 \t183   \t12.0633\t80.9519\t5  \t1000\n",
-      "37 \t173   \t18.8   \t114.076\t5  \t1000\n",
-      "38 \t169   \t11.9233\t80.9554\t5  \t1000\n",
-      "39 \t165   \t8.82   \t57.3532\t5  \t1000\n",
-      "40 \t172   \t5.45   \t1.6973 \t5  \t15  \n",
-      "41 \t181   \t12.1467\t80.9505\t5  \t1000\n",
-      "42 \t185   \t8.88   \t57.3495\t5  \t1000\n",
-      "43 \t182   \t15.5167\t98.9672\t5  \t1000\n",
-      "44 \t175   \t8.92333\t57.3494\t5  \t1000\n",
-      "45 \t194   \t5.66333\t2.34449\t5  \t20  \n",
-      "46 \t189   \t12.0667\t80.952 \t5  \t1000\n",
-      "47 \t170   \t5.66333\t2.58134\t5  \t25  \n",
-      "48 \t185   \t12.1267\t80.9495\t5  \t1000\n",
-      "49 \t186   \t18.8333\t114.074\t5  \t1000\n",
-      "50 \t194   \t12.18  \t80.9506\t5  \t1000\n"
+      "gen\tnevals\tavg   \tstd    \tmin\tmax \n",
+      "0  \t300   \t996.83\t54.8144\t49 \t1000\n",
+      "1  \t180   \t1000  \t0      \t1000\t1000\n",
+      "2  \t175   \t1000  \t0      \t1000\t1000\n",
+      "3  \t172   \t1000  \t0      \t1000\t1000\n",
+      "4  \t182   \t1000  \t0      \t1000\t1000\n",
+      "5  \t171   \t1000  \t0      \t1000\t1000\n",
+      "6  \t184   \t1000  \t0      \t1000\t1000\n",
+      "7  \t190   \t1000  \t0      \t1000\t1000\n",
+      "8  \t178   \t1000  \t0      \t1000\t1000\n",
+      "9  \t193   \t1000  \t0      \t1000\t1000\n",
+      "10 \t183   \t996.817\t55.045 \t45  \t1000\n",
+      "11 \t189   \t993.617\t77.9188\t40  \t1000\n",
+      "12 \t183   \t980.85 \t134.05 \t40  \t1000\n",
+      "13 \t178   \t968.093\t171.824\t40  \t1000\n",
+      "14 \t170   \t926.67 \t254.486\t40  \t1000\n",
+      "15 \t187   \t881.933\t314.781\t35  \t1000\n",
+      "16 \t169   \t760.65 \t414.572\t30  \t1000\n",
+      "17 \t187   \t572.07 \t476.302\t25  \t1000\n",
+      "18 \t192   \t308.99 \t430.937\t25  \t1000\n",
+      "19 \t176   \t127.393\t280.006\t20  \t1000\n",
+      "20 \t175   \t53.6233\t135.272\t20  \t1000\n",
+      "21 \t172   \t62.8833\t174.067\t15  \t1000\n",
+      "22 \t192   \t62.7933\t182.885\t15  \t1000\n",
+      "23 \t175   \t66.28  \t198.761\t14  \t1000\n",
+      "24 \t175   \t56.77  \t184.062\t10  \t1000\n",
+      "25 \t198   \t40.8333\t148.304\t9   \t1000\n",
+      "26 \t181   \t44.8267\t168.007\t9   \t1000\n",
+      "27 \t175   \t39.5367\t158.998\t9   \t1000\n",
+      "28 \t161   \t47.8033\t185.788\t9   \t1000\n",
+      "29 \t186   \t46.3133\t186.069\t9   \t1000\n",
+      "30 \t164   \t35.6033\t159.63 \t9   \t1000\n",
+      "31 \t181   \t45.69  \t186.187\t9   \t1000\n",
+      "32 \t182   \t35.58  \t159.635\t9   \t1000\n",
+      "33 \t194   \t42.3567\t177.835\t9   \t1000\n",
+      "34 \t192   \t38.9533\t169.016\t9   \t1000\n",
+      "35 \t179   \t35.8233\t159.6  \t9   \t1000\n",
+      "36 \t181   \t25.7433\t126.842\t9   \t1000\n",
+      "37 \t187   \t32.4767\t149.553\t9   \t1000\n",
+      "38 \t194   \t38.9767\t169.012\t9   \t1000\n",
+      "39 \t185   \t32.6167\t149.535\t9   \t1000\n",
+      "40 \t180   \t32.3533\t149.57 \t9   \t1000\n",
+      "41 \t181   \t45.57  \t186.208\t9   \t1000\n",
+      "42 \t186   \t32.41  \t149.561\t9   \t1000\n",
+      "43 \t182   \t35.7767\t159.606\t9   \t1000\n",
+      "44 \t173   \t42.24  \t177.854\t9   \t1000\n",
+      "45 \t184   \t38.95  \t169.017\t9   \t1000\n",
+      "46 \t175   \t42.3733\t177.834\t9   \t1000\n",
+      "47 \t198   \t19.2433\t98.5807\t9   \t1000\n",
+      "48 \t188   \t42.3967\t177.828\t9   \t1000\n",
+      "49 \t167   \t35.6967\t159.617\t9   \t1000\n",
+      "50 \t187   \t42.3533\t177.835\t9   \t1000\n"
      ]
     },
     {
@@ -354,13 +495,13 @@
        "   0,\n",
        "   0,\n",
        "   0,\n",
-       "   0,\n",
-       "   1,\n",
-       "   0,\n",
        "   1,\n",
        "   0,\n",
        "   0,\n",
        "   0,\n",
+       "   0,\n",
+       "   0,\n",
+       "   1,\n",
        "   1,\n",
        "   0,\n",
        "   0,\n",
@@ -372,7 +513,7 @@
        " [2])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
