--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -356,9 +356,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "exp2ipynb",
    "language": "python",
-   "name": "python3"
+   "name": "exp2ipynb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -370,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
