--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -38,7 +38,9 @@
     "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir, largest_indices\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
     "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "from sklearn.tree import export_graphviz\n",
+    "import pydot"
    ]
   },
   {
@@ -351,16 +353,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ML_Best\n",
-    "# MyML.best_estimator_.get_params"
+    "if ML_Regressor in ['RF']:\n",
+    "    # Pull out one tree from the forest\n",
+    "    tree = ML_Best['Promoter Activity_ML'][2]\n",
+    "\n",
+    "    # Export the image to a dot file\n",
+    "    export_graphviz(tree, out_file = 'tree.dot', rounded = True, precision = 1)\n",
+    "    (graph, ) = pydot.graph_from_dot_file('tree.dot')\n",
+    "    graph.write_png('tree.png')\n",
+    "    # MyML.best_estimator_.get_params"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "exp2ipynb",
    "language": "python",
-   "name": "python3"
+   "name": "exp2ipynb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -372,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
