--- a/N-Promoter-Prediction.ipynb
+++ b/N-Promoter-Prediction.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,9 @@
     "import pandas as pd\n",
     "import joblib\n",
     "import pickle\n",
+    "import time\n",
     "\n",
-    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, make_GAtoolbox\n"
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, ExtractRefSeq, GeneOptimizer, toLetter, SequenceSinglePredFull, evaluation\n"
    ]
   },
   {
@@ -39,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already existent data directory  data-Example1-Pput .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
@@ -66,89 +59,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading training data"
+    "## Loading training data and ML files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Following outliers were detected: ID: ['BGSPL14g_19_a'], Value: [[50.13234789]]\n",
-      "Categorization of expression.\n",
-      "The expression values were sorted into the following bins: [ 0.2178722  16.5660553  24.76999231 35.15239853]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "SeqDat = Data_Src_Load(Name_Dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Target expression parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracted reference sequences\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Target expression, as measured\n",
-    "Target_Express = np.array([10, 20, 30], dtype=int)\n",
-    "\n",
-    "# Number of reference sequences for each target expression\n",
-    "RefNum = 5\n",
-    "\n",
     "YCNum = 0\n",
     "ML_TargetCol = '{}_ML'.format(Y_Col_Name[YCNum])\n",
-    "Seq_LetterCol = '{}_letter-encrypted'.format(Name_Dict['Sequence_column'])\n",
-    "Seq_CategoCol = '{}_label-encrypted'.format(Name_Dict['Sequence_column'])\n",
-    "SeqRef = pd.DataFrame(columns=[Name_Dict['ID_Col_Name'], Seq_LetterCol, Seq_CategoCol, Y_Col_Name[YCNum], ML_TargetCol])\n",
-    "for ExpVal in Target_Express:\n",
-    "    # Find Target_Express in activity measurement and extract the actual ML optimization\n",
-    "    SeqIdx = np.argpartition(np.ravel(np.array(np.abs(SeqDat[Y_Col_Name]-ExpVal))), RefNum)[:RefNum]\n",
-    "    SeqRef = SeqRef.append(SeqDat.loc[SeqIdx, [Name_Dict['ID_Col_Name'], Seq_LetterCol, Seq_CategoCol, Y_Col_Name[YCNum], ML_TargetCol]], ignore_index=True)\n",
-    "    \n",
-    "print('Extracted reference sequences')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "Measure_Name = ML_TargetCol\n",
     "# loading correct ML regressor file and parameters for data preparation\n",
     "Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Regressor.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
     "Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "\n",
+    "SeqDat = Data_Src_Load(Name_Dict)\n",
     "\n",
     "try:\n",
     "#         ML_DictName = (Measure_Name)\n",
@@ -168,53 +95,57 @@
     "except FileNotFoundError:\n",
     "    print('Regressor file not found. Check parameter \"ML_Date\" in \"config.txt\"')\n",
     "\n",
-    "# Save number of nukleotides the regressor uses as input, this is required to specifiy the number \n",
+    "# Save number of nucleotides the regressor uses as input, this is required to specifiy the number \n",
     "# of optimization variables\n",
-    "# nNukleotides = myRegr.support_vectors_.shape[1] - 1\n",
+    "# nNucleotides = myRegr.support_vectors_.shape[1] - 1\n",
     "if Name_Dict['ML_Regressor'] == 'SVC' or Name_Dict['ML_Regressor'] == 'SVR':\n",
-    "    nNukleotides = myRegr.support_vectors_.shape[1] - 1\n",
+    "    nNucleotides = myRegr.support_vectors_.shape[1] - 1\n",
     "else:\n",
-    "    nNukleotides = myRegr.n_features_ - 1\n",
+    "    nNucleotides = myRegr.n_features_ - 1\n",
     "    \n",
-    "nPositions = int(nNukleotides/4)\n",
-    "nPositions"
+    "nPositions = int(nNucleotides/4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'myRefSeqs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-e1c7adc10485>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmyRefSeqs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mhof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_GAtoolbox\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnPositions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmyRefSeqs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnpop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mngen\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/expressionexpertipynb/ExpressionExpert_Functions.py\u001b[0m in \u001b[0;36mmake_GAtoolbox\u001b[0;34m(nPositions, myRefSeqs, npop, ngen)\u001b[0m\n\u001b[1;32m   1290\u001b[0m     \u001b[0;31m# ngen: number of generations(=iterations)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1291\u001b[0m     pop, log = algorithms.eaSimple(pop, toolbox, cxpb=0.5, mutpb=0.5, ngen=ngen, \n\u001b[0;32m-> 1292\u001b[0;31m                                    stats=stats, halloffame=hof, verbose=True)\n\u001b[0m\u001b[1;32m   1293\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1294\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mhof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/deap/algorithms.py\u001b[0m in \u001b[0;36meaSimple\u001b[0;34m(population, toolbox, cxpb, mutpb, ngen, stats, halloffame, verbose)\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[0minvalid_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mind\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpopulation\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    150\u001b[0m     \u001b[0mfitnesses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minvalid_ind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfit\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minvalid_ind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfitnesses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    152\u001b[0m         \u001b[0mind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/deap/tools/constraint.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(individual, *args, **kwargs)\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;34m@\u001b[0m\u001b[0mwraps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfbty_fct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/expressionexpertipynb/ExpressionExpert_Functions.py\u001b[0m in \u001b[0;36mfeasible\u001b[0;34m(individual)\u001b[0m\n\u001b[1;32m   1179\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfeasible\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1180\u001b[0m     \u001b[0;31m######## Check if individual is already known ########\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1181\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindividual\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmyRefSeqs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1182\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1183\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'myRefSeqs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# np.delete(np.array(list(mySequences['Sequence'].apply(list))), myParams['Positions_removed'], axis=1)\n",
-    "asd = np.delete(np.array(list(SeqRef[Seq_CategoCol])), Positions_removed, axis=1)\n",
+    "ExpressGoal = [0,1,2]\n",
+    "ExpressFine = [10,20,30]\n",
+    "ReferenceNumber = 3\n",
+    "TargetNumber = 3\n",
+    "MyFinal = pd.DataFrame({'Idx-Original':[], 'Strain-ID':[], 'Sequence':[], 'target':[]})\n",
+    "# TargetSeqs = dict({'ID':[], 'Sequence':[], 'Expression': []})\n",
     "\n",
-    "myRefSeqs = list(asd[-5:])\n",
-    "hof, _, _ = make_GAtoolbox(nPositions, myRefSeqs, npop=1000, ngen=30)"
+    "# extraction of reference sequences, closest expression with respect to ExpressFine input.\n",
+    "for iGoal, iFine in zip(ExpressGoal,ExpressFine):\n",
+    "    MyRefs = ExtractRefSeq(SeqDat, Name_Dict, iFine, ReferenceNumber)\n",
+    "    go = GeneOptimizer()\n",
+    "    myHOF, _ = go.optimize(myRegr, MyRefs, Positions_removed, nNucleotides, target_expr=iGoal, hof_size=TargetNumber)\n",
+    "\n",
+    "    myOptSeq = [''.join(SSeq) for SSeq in np.array([toLetter(Hofi) for Hofi in myHOF])]\n",
+    "    myOptSeqFull = [SequenceSinglePredFull(OptSeq_i, MyRefs['Sequence'], Positions_removed) for OptSeq_i in myOptSeq]\n",
+    "    myOptExpFull = [evaluation(hof_i, myRegr, nNucleotides) for hof_i in myHOF]\n",
+    "    myID =['predicted:{}-{}'.format(iGoal,myCount) for myCount in range(1,TargetNumber+1)]\n",
+    "    TarDict = {'Strain-ID':myID, 'Sequence':myOptSeqFull, 'target':myOptExpFull}\n",
+    "    \n",
+    "    MyFinal = pd.concat([MyFinal, MyRefs, pd.DataFrame(TarDict)])\n",
+    "\n",
+    "# MyFinal.reset_index()\n",
+    "Csv_ID = 'Predicted-Target-Promoter'\n",
+    "TarCsv_File = os.path.join('{}_{}_{}.csv'.format(time.strftime('%Y%m%d'), File_Base, Csv_ID))\n",
+    "MyFinal.to_csv(TarCsv_File, index=None)\n",
+    "print('Target sequences saved as: {}'.format(TarCsv_File))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "exp2ipynb",
    "language": "python",
-   "name": "python3"
+   "name": "exp2ipynb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -226,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
