--- a/RegressorTests/GeneOptim_GA.ipynb
+++ b/RegressorTests/GeneOptim_GA.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import joblib\n",
-    "import utils\n",
+    "# import utils\n",
     "import random\n",
     "import numpy\n",
     "import timeit\n",
@@ -24,12 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regressor_File = '../data-PromLib_EcolPtai/00000000_PromLib_EcolPtai_Ecol-Promoter-Activity_SVR-Regressor.pkl' #'SVR-Regressor-Standard.pkl'\n",
-    "Scaler_File = '../data-PromLib_EcolPtai/00000000_PromLib_EcolPtai_Ecol-Promoter-Activity_SVR-Params.pkl'#'SVR-Scaler.pkl'"
+    "# Regressor_File = '../data-PromLib_EcolPtai/00000000_PromLib_EcolPtai_Ecol-Promoter-Activity_SVR-Regressor.pkl' #'SVR-Regressor-Standard.pkl'\n",
+    "# Scaler_File = '../data-PromLib_EcolPtai/00000000_PromLib_EcolPtai_Ecol-Promoter-Activity_SVR-Params.pkl'#'SVR-Scaler.pkl'\n",
+    "Scaler_File = '../data-Example1-Pput/00000000_Example1-Pput_Promoter-Activity_ML_SV3-Params.pkl'\n",
+    "Regressor_File = '../data-Example1-Pput/00000000_Example1-Pput_Promoter-Activity_ML_SV3-Regressor.pkl'\n"
    ]
   },
   {
@@ -41,9 +43,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Positions_removed': array([ 0,  1,  2,  3,  4,  7,  8,  9, 11, 13, 15, 17, 19, 22, 23, 27, 28,\n",
+       "        29, 33, 34, 35, 36, 37, 38, 39])}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ulf/anaconda3/envs/exp2ipynb/lib/python3.9/site-packages/sklearn/base.py:310: UserWarning: Trying to unpickle estimator SVC from version 0.22.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Unpickle regressor and scaler\n",
     "myRegr = joblib.load(Regressor_File)\n",
@@ -51,7 +83,7 @@
     "\n",
     "# Create dictionary containing the output scaler\n",
     "# scaler = myScaler['Promoter Activity_ML_Scaler']\n",
-    "scaler = myScaler['Ecol Promoter Activity_Scaler']\n"
+    "# scaler = myScaler['Ecol Promoter Activity_Scaler']\n"
    ]
   },
   {
@@ -219,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "exp2ipynb",
    "language": "python",
-   "name": "python3"
+   "name": "exp2ipynb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -233,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
