remove 3.ipyng std*2, multiple library GA-opt

--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -37,10 +37,10 @@
     "from math import sqrt\n",
     "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir, largest_indices\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score\n",
-    "%matplotlib inline\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score, matthews_corrcoef\n",
     "from sklearn.tree import export_graphviz\n",
-    "import pydot"
+    "import pydot\n",
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -104,7 +104,7 @@
    "source": [
     "# Loading the correct scoring for regression and classification\n",
     "if Response_Value > 1:\n",
-    "    my_score = make_scorer(f1_score, average='weighted')\n",
+    "    my_score = make_scorer(matthews_corrcoef) # (matthews_corrcoef)(f1_score, average='weighted')\n",
     "else:\n",
     "    my_score = make_scorer(r2_score)\n",
     "    \n",
@@ -199,7 +199,7 @@
     "\n",
     "    print('Cross validation for {}, ML-Type: {}'.format(Measure_Name, Name_Dict['ML_Regressor']))\n",
     "    Report_txt = 'F1-weighted average Statistic: {:.2f} (+/-{:.2f})' if Response_Value >1 else 'R2 Statistic: {:.2f} (+/-{:.2f})'\n",
-    "    print(Report_txt.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()*2))\n",
+    "    print(Report_txt.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()))\n",
     "\n",
     "print('Estimator input: {}-features ({:.0f} nucleotide positions)'.format(X_train.shape[1], (X_train.shape[1]-1)/4))"
    ]
@@ -355,7 +355,7 @@
    "source": [
     "if ML_Regressor in ['RF']:\n",
     "    # Pull out one tree from the forest\n",
-    "    tree = ML_Best['Promoter Activity_ML'][2]\n",
+    "    tree = ML_Best[Measure_Name][20]\n",
     "\n",
     "    # Export the image to a dot file\n",
     "    export_graphviz(tree, out_file = 'tree.dot', rounded = True, precision = 1)\n",
