--- a/N-Promoter-Prediction.ipynb
+++ b/N-Promoter-Prediction.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -52,7 +52,8 @@
     "ML_Regressor = Name_Dict['ML_Regressor'][:-1]\n",
     "ML_Type = Name_Dict['ML_Regressor'][-1]\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
-    "Response_Value = eval(Name_Dict['Response_Value'])"
+    "Response_Value = eval(Name_Dict['Response_Value'])\n",
+    "Measure_Numb = int(Name_Dict['Library_Expression'])"
    ]
   },
   {
@@ -68,40 +69,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "YCNum = 0\n",
-    "ML_TargetCol = '{}_ML'.format(Y_Col_Name[YCNum])\n",
-    "Measure_Name = ML_TargetCol\n",
-    "# loading correct ML regressor file and parameters for data preparation\n",
-    "Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Regressor.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
-    "Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "# YCNum = 0\n",
+    "# ML_TargetCol = '{}_ML'.format(Y_Col_Name[YCNum])\n",
+    "# Measure_Name = ML_TargetCol\n",
+    "# # loading correct ML regressor file and parameters for data preparation\n",
+    "# Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Regressor.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "# Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
     "\n",
     "SeqDat = Data_Src_Load(Name_Dict)\n",
+    "myRegr = dict()\n",
+    "myParams = dict()\n",
     "\n",
-    "try:\n",
-    "#         ML_DictName = (Measure_Name)\n",
-    "    myRegr = joblib.load(Regressor_File)\n",
-    "    # I assume the parameters have been generated in the same run as the regressor itself and is located in the same directory following the default naming scheme\n",
-    "    myParams = pickle.load(open(Parameter_File,'rb'))\n",
-    "    # extracting the positions that were removed because of insufficient information content\n",
-    "    Positions_removed = myParams['Positions_removed']\n",
-    "    # if the data was standardized we load the corresponding function\n",
-    "    if Response_Value == 0:\n",
-    "        # loading standard scaler\n",
-    "        Scaler_File = os.path.join(Data_Folder, '{}_{}_{}-Scaler.pkl'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor']))\n",
-    "        Expr_Scaler = pickle.load(open(Scaler_File,'rb'))\n",
-    "        # The standard scaler default name is the name of the expression measurement column with suffix: '_Scaler'\n",
-    "        Scaler_DictName = '{}_Scaler'.format(Y_Col_Name[YCNum])\n",
-    "#             Expr_Scaler[Scaler_DictName] = Data_Prep_Params[Scaler_DictName]\n",
-    "except FileNotFoundError:\n",
-    "    print('Regressor file not found. Check parameter \"ML_Date\" in \"config.txt\"')\n",
+    "for Meas_Idx in range(Measure_Numb): \n",
+    "#     ML_TargetCol = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
+    "    Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
+    "    # loading correct ML regressor file and parameters for data preparation\n",
+    "    Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Regressor.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "    Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
     "\n",
-    "# Save number of nucleotides the regressor uses as input, this is required to specifiy the number \n",
-    "# of optimization variables\n",
-    "# nNucleotides = myRegr.support_vectors_.shape[1] - 1\n",
-    "if Name_Dict['ML_Regressor'] == 'SVC' or Name_Dict['ML_Regressor'] == 'SVR':\n",
-    "    nNucleotides = myRegr.support_vectors_.shape[1] - 1\n",
-    "else:\n",
-    "    nNucleotides = myRegr.n_features_ - 1\n",
+    "    try:\n",
+    "    #         ML_DictName = (Measure_Name)\n",
+    "        myRegr[Meas_Idx] = joblib.load(Regressor_File)\n",
+    "        # I assume the parameters have been generated in the same run as the regressor itself and is located in the same directory following the default naming scheme\n",
+    "        myParams = pickle.load(open(Parameter_File,'rb'))\n",
+    "        # extracting the positions that were removed because of insufficient information content\n",
+    "        Positions_removed = myParams['Positions_removed']\n",
+    "        # if the data was standardized we load the corresponding function\n",
+    "        if Response_Value == 0:\n",
+    "            # loading standard scaler\n",
+    "            Scaler_File = os.path.join(Data_Folder, '{}_{}_{}-Scaler.pkl'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor']))\n",
+    "            Expr_Scaler[Meas_Idx] = pickle.load(open(Scaler_File,'rb'))\n",
+    "            # The standard scaler default name is the name of the expression measurement column with suffix: '_Scaler'\n",
+    "            Scaler_DictName[Meas_Idx] = '{}_Scaler'.format(Y_Col_Name[Meas_Idx])\n",
+    "    #             Expr_Scaler[Scaler_DictName] = Data_Prep_Params[Scaler_DictName]\n",
+    "    except FileNotFoundError:\n",
+    "        print('Regressor file not found. Check parameter \"ML_Date\" in \"config.txt\"')\n",
+    "\n",
+    "    # Save number of nucleotides the regressor uses as input, this is required to specifiy the number \n",
+    "    # of optimization variables\n",
+    "    # nNucleotides = myRegr.support_vectors_.shape[1] - 1\n",
+    "    if Name_Dict['ML_Regressor'] == 'SVC' or Name_Dict['ML_Regressor'] == 'SVR':\n",
+    "        nNucleotides = myRegr[Meas_Idx].support_vectors_.shape[1] - 1\n",
+    "    else:\n",
+    "        nNucleotides = myRegr[Meas_Idx].n_features_ - 1\n",
     "    \n",
     "nPositions = int(nNucleotides/4)"
    ]
@@ -112,32 +122,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ExpressGoal = [0,1,2]\n",
-    "ExpressFine = [10,20,30]\n",
-    "ReferenceNumber = 3\n",
+    "ExpressGoal = {0:[1], 1:[2]}\n",
+    "ExpressFine = {0:[.03], 1:[.04]}\n",
+    "ReferenceNumber = 2\n",
     "TargetNumber = 3\n",
     "MyFinal = pd.DataFrame({'Idx-Original':[], 'Strain-ID':[], 'Sequence':[], 'target':[]})\n",
     "# TargetSeqs = dict({'ID':[], 'Sequence':[], 'Expression': []})\n",
     "\n",
-    "# extraction of reference sequences, closest expression with respect to ExpressFine input.\n",
-    "for iGoal, iFine in zip(ExpressGoal,ExpressFine):\n",
-    "    MyRefs = ExtractRefSeq(SeqDat, Name_Dict, iFine, ReferenceNumber)\n",
-    "    go = GeneOptimizer()\n",
-    "    myHOF, _ = go.optimize(myRegr, MyRefs, Positions_removed, nNucleotides, target_expr=iGoal, hof_size=TargetNumber)\n",
+    "for Meas_Idx in ExpressGoal.keys(): \n",
+    "#     Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
+    "    # extraction of reference sequences, closest expression with respect to ExpressFine input.\n",
+    "    for iGoal, iFine in zip(ExpressGoal[Meas_Idx],ExpressFine[Meas_Idx]):\n",
+    "        MyRefs = ExtractRefSeq(SeqDat, Name_Dict, iFine, ReferenceNumber)\n",
+    "        go = GeneOptimizer()\n",
+    "        myHOF, _ = go.optimize(myRegr[Meas_Idx], MyRefs, Positions_removed, nNucleotides, target_expr=iGoal, hof_size=TargetNumber)\n",
     "\n",
-    "    myOptSeq = [''.join(SSeq) for SSeq in np.array([toLetter(Hofi) for Hofi in myHOF])]\n",
-    "    myOptSeqFull = [SequenceSinglePredFull(OptSeq_i, MyRefs['Sequence'], Positions_removed) for OptSeq_i in myOptSeq]\n",
-    "    myOptExpFull = [evaluation(hof_i, myRegr, nNucleotides) for hof_i in myHOF]\n",
-    "    myID =['predicted:{}-{}'.format(iGoal,myCount) for myCount in range(1,TargetNumber+1)]\n",
-    "    TarDict = {'Strain-ID':myID, 'Sequence':myOptSeqFull, 'target':myOptExpFull}\n",
-    "    \n",
-    "    MyFinal = pd.concat([MyFinal, MyRefs, pd.DataFrame(TarDict)])\n",
+    "        myOptSeq = [''.join(SSeq) for SSeq in np.array([toLetter(Hofi) for Hofi in myHOF])]\n",
+    "        myOptSeqFull = [SequenceSinglePredFull(OptSeq_i, MyRefs['Sequence'], Positions_removed) for OptSeq_i in myOptSeq]\n",
+    "        myOptExpFull = [evaluation(hof_i, myRegr[Meas_Idx], nNucleotides) for hof_i in myHOF]\n",
+    "        myID =['predicted:{}-{}'.format(iGoal,myCount) for myCount in range(1,TargetNumber+1)]\n",
+    "        TarDict = {'Strain-ID':myID, 'Sequence':myOptSeqFull, 'target':myOptExpFull}\n",
     "\n",
-    "# MyFinal.reset_index()\n",
-    "Csv_ID = 'Predicted-Target-Promoter'\n",
-    "TarCsv_File = os.path.join('{}_{}_{}.csv'.format(time.strftime('%Y%m%d'), File_Base, Csv_ID))\n",
-    "MyFinal.to_csv(TarCsv_File, index=None)\n",
-    "print('Target sequences saved as: {}'.format(TarCsv_File))"
+    "        MyFinal = pd.concat([MyFinal, MyRefs, pd.DataFrame(TarDict)])\n",
+    "\n",
+    "    # MyFinal.reset_index()\n",
+    "    Csv_ID = 'Predicted-Target-Promoter'\n",
+    "    TarCsv_File = os.path.join('{}/{}_{}_{}_{}.csv'.format(Data_Folder, time.strftime('%Y%m%d'), File_Base, Csv_ID, Y_Col_Name[Meas_Idx].replace(' ','-')))\n",
+    "    MyFinal.to_csv(TarCsv_File, index=None)\n",
+    "    print('Target sequences saved as: {}'.format(TarCsv_File))"
    ]
   }
  ],
